# SnapToWindow

./: .gitignore  LICENSE  LICENSE.spdx  LICENSE_APACHE-2.0  README.md  RELEASE.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
scripts/: bump-version.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  hotkeys.rs  lib.rs  main.rs  tray.rs
src-tauri/src/window_manager/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
