[package]
name = "snaptowindow"
version = "0.1.4"
edition = "2024"
description = "A cross-platform window management application"
license = "MIT"
repository = "https://github.com/ctmakes/SnapToWindow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
dirs = "5"
tauri-plugin-process = "2.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
objc = "0.2"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSDictionary", "NSString", "NSValue", "NSGeometry"] }
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSGraphics"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
